--- a/src/app/components/comp2/comp2.component.html
+++ b/src/app/components/comp2/comp2.component.html
@@ -1,1 +1,5 @@
-<p>comp2 works!</p>
+<p>Search with rxjs</p>
+
+<div [formGroup]="searchForm">
+  <input type="text" formControlName="name" placeholder="search something" />
+</div>
