--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
     <li><a routerLink="/comp2">comp2</a></li>
   </ul>
 </nav>
-<router-outlet></router-outlet>
+<div class="cntr">
+  <router-outlet></router-outlet>
+</div>
