--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,3 +25,17 @@ nav {
     }
   }
 }
+
+.cntr {
+  box-shadow: 0px 0px 10px 5px blueviolet;
+  border-radius: 6px;
+
+  display: flex;
+  justify-content: center;
+
+  padding: 2rem;
+  margin: 50px auto;
+
+  height: 300px;
+  width: 600px;
+}
