--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <ul>
     <li><a routerLink="/comp1">comp1</a></li>
     <li><a routerLink="/comp2">comp2</a></li>
+    <li><a routerLink="/parentChild">parent-child</a></li>
   </ul>
 </nav>
 <div class="cntr">
