--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,7 +38,6 @@ nav {
   }
 
   ul {
-    width: 80%;
     margin: 100px auto;
     display: flex;
     flex-direction: column;
@@ -46,7 +45,15 @@ nav {
 
     li {
       list-style: none;
-      padding: 1rem;
+      padding: 1rem 2rem;
+
+      &.active {
+        // background-color: rgb(159, 89, 224);
+        background-color: #fff;
+        a {
+          color: blueviolet !important;
+        }
+      }
 
       a {
         text-decoration: none;
@@ -63,35 +70,25 @@ nav {
   }
 }
 
-.toggleNavButton {
-  background-color: transparent;
-  border: none;
-  position: fixed;
-  top: 20px;
-  left: 210px;
-  cursor: pointer;
-
-  transition: transform 0.2s;
-  &:hover {
-    transform: scale(1.2);
-  }
-
-  i {
-    font-size: 24px;
-    color: #fff;
-  }
-}
-
-.cntr {
-  box-shadow: 0px 0px 10px 5px blueviolet;
-  border-radius: 6px;
+.overlay {
+  width: 100%;
+  height: 100vh;
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
-  padding: 2rem;
-  margin: 50px auto;
+  .cntr {
+    box-shadow: 0px 0px 10px 5px blueviolet;
+    border-radius: 6px;
 
-  min-height: 300px;
-  width: 600px;
+    display: flex;
+    justify-content: center;
+
+    padding: 2rem;
+    margin: 0 auto;
+
+    min-height: 300px;
+    width: 600px;
+  }
 }
