restructured parent-child data transfer with ng-content + styling updates

--- a/src/app/components/parent-child/parent-child.component.html
+++ b/src/app/components/parent-child/parent-child.component.html
@@ -1,8 +1,6 @@
 <app-add-user (createdUser)="addUser($event)"></app-add-user>
 <div class="err" *ngIf="userExistsMessage">Uneti username vec postoji!!!</div>
 
-<app-user
-  *ngFor="let user of users"
-  [userName]="user"
-  (removedUser)="removeUser($event)"
-></app-user>
+<app-user *ngFor="let user of users" [userName]="user">
+  <button class="rmvBtn" (click)="removeUser(user)">x</button>
+</app-user>
