--- a/src/app/components/parent-child/parent-child.component.scss
+++ b/src/app/components/parent-child/parent-child.component.scss
@@ -1,1 +1,15 @@
+.rmvBtn {
+  background-color: #fff;
+  color: blueviolet;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  width: 25px;
+  border: none;
+  border-radius: 6px;
+  transition: 0.3s;
+  cursor: pointer;
 
+  &:hover {
+    transform: scale(1.1);
+  }
+}
