--- a/src/app/components/parent-child/user/user.component.html
+++ b/src/app/components/parent-child/user/user.component.html
@@ -1,4 +1,4 @@
 <div>
-  <p>User created!! Username: {{ username }}</p>
-  <button (click)="onUserRemoved()">x</button>
+  <p>Username: {{ username }}</p>
+  <ng-content></ng-content>
 </div>
