--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -75,11 +75,8 @@ nav {
 
 .overlay {
   width: 100%;
-  height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-height: 100vh;
+  padding-top: 150px;
 
   .cntr {
     box-shadow: 0px 0px 10px 5px blueviolet;
@@ -93,5 +90,6 @@ nav {
 
     min-height: 300px;
     width: 600px;
+    max-width: 80%;
   }
 }
