--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,13 +8,13 @@
   </button>
   <ul>
     <li [routerLinkActive]="['active']">
-      <a routerLink="/comp1" (click)="toggleNav()">comp1</a>
+      <a class="nav-link" routerLink="/comp1">comp1</a>
     </li>
     <li [routerLinkActive]="['active']">
-      <a routerLink="/comp2" (click)="toggleNav()">comp2</a>
+      <a class="nav-link" routerLink="/comp2">comp2</a>
     </li>
     <li [routerLinkActive]="['active']">
-      <a routerLink="/parentChild" (click)="toggleNav()">parent-child</a>
+      <a class="nav-link" routerLink="/parentChild">parent-child</a>
     </li>
   </ul>
 </nav>
