--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
     <li [routerLinkActive]="['active']">
       <a class="nav-link" routerLink="/parentChild">parent-child</a>
     </li>
+    <li [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['/nestedRoutes']">nested-routes</a>
+    </li>
   </ul>
 </nav>
 
