nested routes with params + page not found redirect(sidebar nav)

--- a/src/app/components/nested-routes/nested-routes.component.html
+++ b/src/app/components/nested-routes/nested-routes.component.html
@@ -1,7 +1,12 @@
 <nav>
   <ul>
     <li [routerLinkActive]="['nActive']">
-      <a [routerLink]="['./ruta1']">ruta1</a>
+      <a
+        [routerLink]="['./ruta1', 123, 'lazar']"
+        [queryParams]="{ page: 1, search: 'helo world' }"
+        [fragment]="'load'"
+        >ruta1</a
+      >
     </li>
     <li [routerLinkActive]="['nActive']">
       <a [routerLink]="['./ruta2']">ruta2</a>
