form template component setup

--- a/rxjs-routes-forms/src/app/app.component.html
+++ b/rxjs-routes-forms/src/app/app.component.html
@@ -19,6 +19,9 @@
     <li [routerLinkActive]="['active']">
       <a class="nav-link" [routerLink]="['/nestedRoutes']">nested-routes</a>
     </li>
+    <li [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['/templateForm']">template-form</a>
+    </li>
   </ul>
 </nav>
 
