--- a/rxjs-routes-forms/src/app/components/template-form/template-form.component.html
+++ b/rxjs-routes-forms/src/app/components/template-form/template-form.component.html
@@ -1,1 +1,27 @@
-<p>template-form works!</p>
+<form (ngSubmit)="onFormSubmit(f)" #f="ngForm">
+  <div class="form-group">
+    <label for="username">User Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="username"
+      name="username"
+      ngModel
+    />
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="text" class="form-control" id="email" name="email" ngModel />
+  </div>
+  <div class="form-group">
+    <label for="gender">Gender</label>
+    <select class="form-control" name="gender" id="gender" ngModel>
+      <option disabled selected>Gender</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
+    </select>
+  </div>
+  <div class="form-group btn">
+    <input class="form-control" type="submit" value="Submit" />
+  </div>
+</form>
