--- a/rxjs-routes-forms/src/app/components/template-form/template-form.component.html
+++ b/rxjs-routes-forms/src/app/components/template-form/template-form.component.html
@@ -1,17 +1,36 @@
-<form (ngSubmit)="onFormSubmit(f)" #f="ngForm">
-  <div class="form-group">
-    <label for="username">User Name</label>
-    <input
-      type="text"
-      class="form-control"
-      id="username"
-      name="username"
-      ngModel
-    />
-  </div>
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="text" class="form-control" id="email" name="email" ngModel />
+<form (ngSubmit)="onFormSubmit()" #f="ngForm">
+  <div ngModelGroup="loginData">
+    <div class="form-group">
+      <label for="username">User Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        name="username"
+        ngModel
+        required
+      />
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input
+          type="text"
+          class="form-control"
+          id="email"
+          name="email"
+          ngModel
+          required
+          email
+          #email="ngModel"
+        />
+      </div>
+      <span
+        class="error-msg"
+        *ngIf="!email.valid && email.touched"
+        style="color: red; padding: 10px"
+        >Enter a valid email</span
+      >
+    </div>
   </div>
   <div class="form-group">
     <label for="gender">Gender</label>
