reactive form example

--- a/rxjs-routes-forms/src/app/app.component.html
+++ b/rxjs-routes-forms/src/app/app.component.html
@@ -22,6 +22,9 @@
     <li [routerLinkActive]="['active']">
       <a class="nav-link" [routerLink]="['/templateForm']">template-form</a>
     </li>
+    <li [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['/reactiveForms']">reactive-form</a>
+    </li>
   </ul>
 </nav>
 
