--- a/rxjs-routes-forms/src/app/components/reactive-forms/reactive-forms.component.html
+++ b/rxjs-routes-forms/src/app/components/reactive-forms/reactive-forms.component.html
@@ -9,8 +9,17 @@
           !signUpForm.get('userData.username')!.valid &&
           signUpForm.get('userData.username')!.touched
         "
-        >Please enter valid username</span
       >
+        <span *ngIf="signUpForm.get('userData.username')!.hasError('required')"
+          >Username is required!</span
+        >
+        <span
+          *ngIf="
+            signUpForm.get('userData.username')!.hasError('nameIsRestricted')
+          "
+          >This username is restricted!</span
+        >
+      </span>
     </div>
     <div class="form-group">
       <label>Email</label>
