filter pipes practice setup (component and route)

--- a/rxjs-routes-forms/src/app/app.component.html
+++ b/rxjs-routes-forms/src/app/app.component.html
@@ -25,6 +25,9 @@
     <li [routerLinkActive]="['active']">
       <a class="nav-link" [routerLink]="['/reactiveForms']">reactive-form</a>
     </li>
+    <li [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['/filterPipes']">filter-pipes</a>
+    </li>
   </ul>
 </nav>
 
