--- a/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
+++ b/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
@@ -1,1 +1,6 @@
-<p>filter-pipes works!</p>
+<div class="container">
+  <div *ngFor="let user of users">
+    <div>Name: {{ user.name }}</div>
+    <div>Join date: {{ user.joinDate }}</div>
+  </div>
+</div>
