--- a/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
+++ b/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div *ngFor="let user of users">
-    <div>Name: {{ user.name }}</div>
-    <div>Join date: {{ user.joinDate }}</div>
+    <div>Name: {{ user.name | shorten: 6 }}</div>
+    <div>Join date: {{ user.joinDate | date: "fullDate" | lowercase }}</div>
   </div>
 </div>
