impure filter pipe impl

--- a/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
+++ b/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-  <div *ngFor="let user of users">
+  <div>
+    <div class="s-bar">
+      <input type="text" placeholder="search.." [(ngModel)]="filterString" />
+    </div>
+  </div>
+  <div *ngFor="let user of users | filter: filterString">
     <div>Name: {{ user.name | shorten: 6 }}</div>
     <div>Join date: {{ user.joinDate | date: "fullDate" | lowercase }}</div>
   </div>
