--- a/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.scss
+++ b/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.scss
@@ -5,4 +5,14 @@
     padding: 10px;
     border-radius: 6px;
   }
+
+  .s-bar {
+    input {
+      width: 100%;
+      outline: none;
+      border: none;
+      border-radius: 6px;
+      padding: 6px;
+    }
+  }
 }
