async pipe example

--- a/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
+++ b/rxjs-routes-forms/src/app/components/filter-pipes/filter-pipes.component.html
@@ -1,5 +1,9 @@
 <div class="container">
   <div>
+    <div>async data: {{ status }}</div>
+    <div>async data: "{{ status | async }}"</div>
+  </div>
+  <div>
     <div class="s-bar">
       <input type="text" placeholder="search.." [(ngModel)]="filterString" />
     </div>
