http component + post component and post form

--- a/rxjs-routes-forms/src/app/app.component.html
+++ b/rxjs-routes-forms/src/app/app.component.html
@@ -28,6 +28,9 @@
     <li [routerLinkActive]="['active']">
       <a class="nav-link" [routerLink]="['/filterPipes']">filter-pipes</a>
     </li>
+    <li [routerLinkActive]="['active']">
+      <a class="nav-link" [routerLink]="['/http']">http</a>
+    </li>
   </ul>
 </nav>
 
