--- a/rxjs-routes-forms/src/app/components/http/post/post.component.html
+++ b/rxjs-routes-forms/src/app/components/http/post/post.component.html
@@ -35,4 +35,18 @@
       <button type="submit">Add Post</button>
     </div>
   </form>
+  <div class="showcase">
+    <table>
+      <thead>
+        <th>Title</th>
+        <th>Content</th>
+      </thead>
+      <tbody>
+        <tr *ngFor="let post of posts">
+          <td>{{ post.title }}</td>
+          <td>{{ post.content }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
