--- a/rxjs-routes-forms/src/app/components/http/post/post.component.html
+++ b/rxjs-routes-forms/src/app/components/http/post/post.component.html
@@ -31,8 +31,9 @@
         Content is required..
       </div>
     </div>
-    <div class="form-group">
+    <div class="btn-container">
       <button type="submit">Add Post</button>
+      <button (click)="onClearPosts()">Clear Posts</button>
     </div>
   </form>
   <div class="showcase">
