app comp template

--- a/authentication/src/app/components/protected/protected.component.html
+++ b/authentication/src/app/components/protected/protected.component.html
@@ -1,1 +1,6 @@
 <p>protected works!</p>
+<p>protected works!</p>
+<p>protected works!</p>
+<p>protected works!</p>
+<p>protected works!</p>
+<p>protected works!</p>
