--- a/authentication/src/app/app.component.html
+++ b/authentication/src/app/app.component.html
@@ -1,1 +1,27 @@
-<router-outlet></router-outlet>
+<div class="flex-wrapper">
+  <!-- navbar -->
+  <nav>
+    <ul>
+      <!-- pages -->
+      <section>
+        <li [routerLinkActive]="['active']">
+          <a routerLink="/home">Home</a>
+        </li>
+        <li [routerLinkActive]="['active']">
+          <a routerLink="/protected">Protected</a>
+        </li>
+      </section>
+      <!-- authentication -->
+      <section>
+        <li [routerLinkActive]="['active']">
+          <a routerLink="/auth">Login</a>
+        </li>
+      </section>
+    </ul>
+  </nav>
+
+  <!-- page content -->
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
