--- a/authentication/src/app/app.component.scss
+++ b/authentication/src/app/app.component.scss
@@ -2,9 +2,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   nav {
     background-color: rebeccapurple;
+    width: 100%;
 
     ul {
       list-style-type: none;
@@ -23,6 +25,7 @@
             display: inline-block;
             text-decoration: none;
             padding: 1rem;
+            transition: 0.2s ease-out;
 
             &:hover {
               background-color: rgb(181, 102, 255);
@@ -34,15 +37,16 @@
   }
 
   .content {
-    flex: 1;
     background-color: rgb(181, 102, 255);
-    width: 70%;
+    width: 80%;
     max-width: 2222px;
+    min-height: fit-content;
     margin: 0 auto;
+    padding: 100px;
+    border-radius: 3px;
 
     display: flex;
     justify-content: center;
-    padding-top: 2rem;
     color: #f3f3f3;
   }
 }
