--- a/authentication/src/app/components/auth/auth.component.html
+++ b/authentication/src/app/components/auth/auth.component.html
@@ -1,1 +1,18 @@
-<p>auth works!</p>
+<form>
+  <h2>Log In</h2>
+  <div class="form-group">
+    <input type="text" placeholder="Enter your email.." />
+  </div>
+  <div class="form-group">
+    <input type="passwrd" placeholder="Enter your password.." />
+  </div>
+
+  <div class="btn-container form-group">
+    <button type="submit" id="login">
+      {{ isLoginMode ? "Login" : "Sign Up" }}
+    </button>
+    <button type="button" id="register" (click)="onSwitchMode()">
+      Switch to {{ !isLoginMode ? "Login" : "Sign Up" }}
+    </button>
+  </div>
+</form>
