--- a/authentication/src/app/components/auth/auth.component.html
+++ b/authentication/src/app/components/auth/auth.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="form-group">
     <input
-      type="passwrd"
+      type="password"
       name="password"
       placeholder="Enter your password.."
       #password="ngModel"
