--- a/authentication/src/app/components/auth/auth.component.html
+++ b/authentication/src/app/components/auth/auth.component.html
@@ -1,5 +1,5 @@
 <form #authForm="ngForm" (ngSubmit)="onFormSubmit(authForm)" *ngIf="!isLoading">
-  <h2>Log In</h2>
+  <h2>{{ !isLoginMode ? "Sign Up" : "Login" }}</h2>
   <div class="form-group">
     <input
       type="text"
